--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-merlot
+title: Welcome to the Octocat's homepage!
+descrion: Feelfree to bookmark this to keep an eye on my project updates
